Fix error with toList